Tue May 05 14:17:16 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: When listing matching terms, don't make the commas
	  italic.

Tue May 05 12:43:59 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst: Document 'E' prefixed boolean terms for filtering
	  by extension (see #668, reported by bramvdh).

Tue May 05 12:42:59 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst: Whitespace cleanup.

Tue May 05 12:41:52 GMT 2015  Olly Betts <olly@survex.com>

	* templates/xml: Add XML declaration.

Tue May 05 12:40:44 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: Eliminate blank line before <html>.

Tue May 05 12:39:01 GMT 2015  Olly Betts <olly@survex.com>

	* templates/godmode: Return charset utf-8 in the content-type.

Tue May 05 12:29:46 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: $prettyurl undoes %-encoding of UTF-8 in 1.2.21
	  and later too.

Tue May 05 12:27:14 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: Note that one should ensure that Omega gets sent
	  form submissions encoded in UTF-8.

Tue May 05 12:23:09 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: Discuss encodings of filenames (see #550).

Tue May 05 12:20:00 GMT 2015  Olly Betts <olly@survex.com>

	* urldecode.h,urlenctest.cc: $prettyurl now decodes valid UTF-8
	  sequences.  Fixes #550 and #644, reported by catkin and terencz.

Tue May 05 12:14:06 GMT 2015  Olly Betts <olly@survex.com>

	* docs/: Add a document about character encoding, as suggested by
	  James Aylett in #550.

Tue May 05 12:08:39 GMT 2015  Olly Betts <olly@survex.com>

	* urldecode.h,urlenctest.cc: Improve decoding done by $prettyurl - we
	  now leave the query and fragment parts of the URL alone and don't
	  decode an escaped "/" (omindex doesn't create URLs with any of
	  these, so we only risk breaking other URLs which have them), and we
	  decode some additional ASCII characters in the path part: