@@ -40,6 +40,7 @@
 #include "cgiparam.h"
 #include "query.h"
 #include "str.h"
+#include "stringutils.h"
 #include "expand.h"
 
 using namespace std;
@@ -259,7 +260,7 @@ try {
 	for (MCI i = g.first; i != g.second; i++) {
 	    const string & v = i->second;
 	    // we'll definitely get empty B fields from "-ALL-" options
-	    if (!v.empty() && isalnum(static_cast<unsigned char>(v[0]))) {
+	    if (!v.empty() && C_isalnum(v[0])) {
 		add_bterm(v);
 		filter_v.push_back(v);
 	    }
